fix: DB 설정 수정