@@ -2,9 +2,11 @@ package com.turtlecoin.auctionservice.domain.auction.dto;
 
 import com.turtlecoin.auctionservice.domain.auction.entity.Auction;
 import com.turtlecoin.auctionservice.domain.auction.entity.AuctionPhoto;
+import com.turtlecoin.auctionservice.domain.auction.entity.AuctionTag;
 import com.turtlecoin.auctionservice.feign.dto.TurtleResponseDTO;
 import com.turtlecoin.auctionservice.feign.dto.UserResponseDTO;
 import lombok.*;
+import lombok.extern.slf4j.Slf4j;
 
 import java.time.LocalDateTime;
 import java.util.List;
@@ -14,6 +16,7 @@ import java.util.stream.Collectors;
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 @AllArgsConstructor
 @Builder
+@Slf4j
 public class AuctionResponseDTO {
     private Long id;
     private Long turtleId;
@@ -29,7 +32,7 @@ public class AuctionResponseDTO {
     private String content;
     private String progress;
     private Long remainingTime;
-    private List<AuctionTagDTO> tags;
+    private List<String> tags;
 
     // 이미지 주소 리스트로 변경
     private List<String> images;
@@ -38,6 +41,7 @@ public class AuctionResponseDTO {
     private UserResponseDTO userInfo;
 
     public static AuctionResponseDTO from(Auction auction, TurtleResponseDTO turtleInfo, UserResponseDTO userInfo, Long remainingTime, Double nowBid) {
+        log.info("Auction Tags: {}", auction.getAuctionTags());
         return AuctionResponseDTO.builder()
                 .id(auction.getId())
                 .turtleId(auction.getTurtleId())
@@ -54,8 +58,8 @@ public class AuctionResponseDTO {
                 .remainingTime(remainingTime)
                 .progress(auction.getAuctionProgress().toString())
                 .tags(auction.getAuctionTags().stream()
-                        .map(AuctionTagDTO::from)
-                        .toList())
+                        .map(AuctionTag::getTag)
+                        .collect(Collectors.toList())) // 태그 리스트
                 .images(auction.getAuctionPhotos().stream()  // 이미지 주소만 추출
                         .map(AuctionPhoto::getImageAddress)
                         .toList())
